--- a/views/templates/layout.html
+++ b/views/templates/layout.html
@@ -9,6 +9,7 @@
     {% block styles %}
         <link rel="stylesheet" href="{{url_for('.static', filename='css/layout.css')}}"> 
         <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.13.3/dist/bootstrap-table.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />    
         {{super()}}
     {% endblock %} 
     {% block scripts %}
@@ -16,6 +17,7 @@
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7g68KcjjZ3nGcT0Jcjo6nWPXfITNVStA&libraries=visualization" type="text/javascript"></script>
     <script src="https://cdn.rawgit.com/PascaleBeier/bootstrap-validate/v2.1.3/dist/bootstrap-validate.js" ></script>
     <script src="https://unpkg.com/bootstrap-table@1.13.3/dist/bootstrap-table.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
     <script src="{{url_for('.static', filename='js/map.js')}}"></script>
     <script src="{{url_for('.static', filename='js/util.js')}}"></script>
     <!-- script src="https://code.highcharts.com/highcharts.src.js"></script -->
