--- a/views/templates/includes/__create_accident_modal.html
+++ b/views/templates/includes/__create_accident_modal.html
@@ -31,10 +31,9 @@
                 <div class="form-group">
                     <label for="accident-address" class="sr-only">Address:</label>
                     <div class="input-group">
-                        <input type="text" class="form-control form-control-sm" id="accident-address" 
-                            pattern="[0-9]{10},[0-9]{10}" maxlength="25" placeholder="Latitude, Longitude" required>
+                        <input type="text" class="form-control form-control-sm" id="accident-address"  maxlength="64" placeholder="Latitude, Longitude" required>
                         <div class="col-auto">
-                          <button type="button" class="btn btn-default mb-2" id="accident-address">Pick HERE</button>
+                          <button type="button" class="btn btn-default mb-2" id="accident-address-button">Pick HERE</button>
                         </div>
                       </div>
                 </div>
@@ -106,6 +105,8 @@
         bootstrapValidate(["#accident-by-victim"],'required')
         bootstrapValidate('#accident-by-name','regex:^[A-Za-z]{3,15}|alpha:Only Letters are acceptable')
         bootstrapValidate(['#no_of_dead','#un-injured','#minor-injuries','#major-injuries'],
-                            'numeric:Only Numbers accepted | max:100:Not more than 100!')
+                            'numeric:Only Numbers accepted')
+        bootstrapValidate('#accident-address', 'regex:^([-+]?)([\d]{1,2})(((\.)(\d+)(,)))(\s*)(([-+]?)([\d]{1,3})((\.)(\d+))?)$:\
+                            Use correct format lat,long')
         $('select').selectpicker();
     </script> 
