--- a/views/templates/includes/__create_accident_modal.html
+++ b/views/templates/includes/__create_accident_modal.html
@@ -18,6 +18,12 @@
                     <textarea class="form-control form-control-sm" id="accident-desc" 
                         pattern=".+{,5}" maxlength="150" rows="2" required></textarea>
                 </div>
+                <div class="form-group row accident-selector">
+                    <label for="accident-time" class="col-sm-4 col-form-label">Time of Accident</label>
+                    <div class="col-sm-8">
+                        <input type="datetime-local" class="form-control form-control-sm" id="accident-time" required>
+                    </div>
+                </div>
                 <div class="custom-file">
                     <input type="file" onchange="display_this(this);" class="custom-file-input" 
                         id="accident-photos" accept="image/*" multiple required>
@@ -83,7 +89,7 @@
                     <div class="col-md mb-3">
                         <label for="accident-by-victim">Victim of Accident</label>
                         <div class="custom-control  custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="accident-by-victim" required>
+                            <input type="checkbox" class="custom-control-input" id="accident-by-victim">
                             <label class="custom-control-label" for="accident-by-victim">Yes</label>
                         </div>
                     </div>
