--- a/views/templates/includes/__signup_modal.html
+++ b/views/templates/includes/__signup_modal.html
@@ -10,28 +10,33 @@
                 </button>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form action="/create-user" method="POST">
                         <div class="form-group">
                             <label for="user-fullname">Full Name</label>
-                            <input type="text" class="form-control" id="user-fullname" placeholder="Firstname,Lastname" required>
+                            <input type="text" class="form-control" id="user-fullname" name="user_name"
+                                placeholder="Firstname,Lastname" required>
                         </div>
                         <div class="form-group">
                             <label for="user-email">Email</label>
-                            <input type="text" class="form-control" id="user-email" placeholder="Email Address" required>
+                            <input type="text" class="form-control" id="user-email" name="user_email"
+                                placeholder="Email Address" required>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="user-pass">Password</label>
-                                <input type="password" class="form-control" id="user-pass" placeholder="Password" required>
+                                <input type="password" class="form-control" id="user-pass" name="user_pass"
+                                    placeholder="Password" required>
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="user-pass-confirm">Confirm Password</label>
-                                <input type="password" class="form-control" id="user-pass-confirm"  placeholder="Re-type Password" required>
+                                <input type="password" class="form-control" id="user-pass-confirm" name="user_cpass" 
+                                    placeholder="Re-type Password" required>
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="user-phonenumber">Phone Number</label>
-                            <input type="tel" class="form-control" id="user-phonenumber" placeholder="256 781 000233" required>
+                            <input type="tel" class="form-control" id="user-phonenumber" name="user_phone" 
+                                placeholder="256 781 000233" required>
                         </div>
                     
                 </div>
