--- a/views/templates/includes/__signup_modal.html
+++ b/views/templates/includes/__signup_modal.html
@@ -13,18 +13,18 @@
                     <form action="/create-user" method="POST">
                         <div class="form-group">
                             <label for="user-fullname">Full Name</label>
-                            <input type="text" class="form-control" id="user-fullname" name="user_name"
+                            <input type="text" class="form-control" id="user-fullname" name="name"
                                 placeholder="Firstname,Lastname" required>
                         </div>
                         <div class="form-group">
                             <label for="user-email">Email</label>
-                            <input type="text" class="form-control" id="user-email" name="user_email"
+                            <input type="text" class="form-control" id="user-email" name="email"
                                 placeholder="Email Address" required>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="user-pass">Password</label>
-                                <input type="password" class="form-control" id="user-pass" name="user_pass"
+                                <input type="password" class="form-control" id="user-pass" name="password"
                                     placeholder="Password" required>
                             </div>
                             <div class="form-group col-md-6">
@@ -35,7 +35,7 @@
                         </div>
                         <div class="form-group">
                             <label for="user-phonenumber">Phone Number</label>
-                            <input type="tel" class="form-control" id="user-phonenumber" name="user_phone" 
+                            <input type="tel" class="form-control" id="user-phonenumber" name="phone" 
                                 placeholder="256 781 000233" required>
                         </div>
                     
