--- a/views/templates/includes/__nav.html
+++ b/views/templates/includes/__nav.html
@@ -17,7 +17,8 @@
 				</li>
 				<li class="nav-item">
 						<a class="nav-link" href="/feeds">Feeds</a>
-					</li>
+				</li>
+				{% if session['username'] %}
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Reports
@@ -29,6 +30,7 @@
 						<a class="dropdown-item" href="#"></a>
 					</div>
 				</li>
+				{% endif %}
 			</ul>
 
 			<ul class="navbar-nav">
@@ -38,6 +40,7 @@
 				<li class="nav-item">
 						<a class="nav-link" href="#" data-toggle="modal" data-target="#signupModal">Create Account</a>
 				</li>
+				{% if session['username'] %}
 				<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							Profile
@@ -48,6 +51,7 @@
 							<a class="dropdown-item" href="/logout">Logout</a>
 						</div>
 				</li>
+				{% endif %}
 			<ul>
 			<form class="form-inline my-2 my-lg-0">
 						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
