[#163513549] Error Page Commit 	- Removed the static error pages 	- Added a single dynamic error page

--- a/views/static/css/layout.css
+++ b/views/static/css/layout.css
@@ -84,4 +84,9 @@ reported{
     color: #2dbf2d;
     margin-top: 4px;
     border-radius: 25px;
+    -webkit-transition-property: display; /* Safari */
+    -webkit-transition-duration: 2s; /* Safari */
+    transition-property: display;
+    transition-duration: 2s;
+    transition-timing-function: ease-in;
 }
