--- a/views/templates/layout.html
+++ b/views/templates/layout.html
@@ -33,9 +33,9 @@
     })
     
     $(window).on('load',function(){
-        if($('.status-body').css("display") != "none"){
+        if($('.flash-status').css("display") != "none"){
             setTimeout(function() {  
-                $('.status-body').css("display",'none')
+                $('.flash-status').css("display",'none')
             }, 3000);
         }
     })
@@ -48,13 +48,13 @@
                 {% include 'includes/__nav.html' %}
             {% endblock %} 
 
-            {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                    <div class="status-body">
-                        {% for message in messages %}
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %} 
+                    {% for category,message in messages %}
+                        <div class="flash-status status-{{category}}">
                             <span>{{ message }}</span>
-                        {% endfor %}  
-                    </div> 
+                        </div>
+                    {% endfor %} 
                 {% endif %}
             {% endwith %} 
             <br>
