--- a/views/templates/includes/__nav.html
+++ b/views/templates/includes/__nav.html
@@ -48,7 +48,7 @@
 							Profile
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown"> 
-							<a class="dropdown-item" href="/dashboard">Dashboard</a>
+							<a class="dropdown-item" data-toggle="modal" data-target="#exampleModal"  href="#">Report Accident</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="/logout">Logout</a>
 						</div>
