[#163499321] Added encrypt type on the form

--- a/views/templates/includes/__create_accident_modal.html
+++ b/views/templates/includes/__create_accident_modal.html
@@ -8,7 +8,7 @@
             </button>
             </div>
             <div class="modal-body">
-            <form action="/create-accident" method="POST">
+            <form action="/create-accident" enctype="multipart/form-data" method="POST">
                 <div class="form-group">
                     <label for="accident-title" class="col-form-label">Title:</label>
                     <input type="text" class="form-control form-control-sm" id="accident-title" name="acc_title" required>
