[#163499309] Uncommenting the loadMap function

--- a/views/templates/home.html
+++ b/views/templates/home.html
@@ -23,7 +23,7 @@
   <script>
   window.onload = function(){
     //console.log(pickCoordinates()) 
-    //loadHeatMap()
+    loadHeatMap()
   }   
   </script>
 {% endblock %}
