[#163503424] Added dash board link to the dropdown

--- a/views/templates/includes/__nav.html
+++ b/views/templates/includes/__nav.html
@@ -48,6 +48,8 @@
 							Profile
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown"> 
+							<a class="dropdown-item" href="/dashboard">My Dashboard</a>
+							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" data-toggle="modal" data-target="#exampleModal"  href="#">Report Accident</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="/logout">Logout</a>
