Commented out the create accident incident even when not logged in

--- a/views/templates/home.html
+++ b/views/templates/home.html
@@ -5,14 +5,14 @@
     {% block body %} 
     {{super()}}
     <div class="container padding">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@report">
+        <!-- button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@report">
             Report an Accident
         </button>  
         <button type="button" class="btn btn-danger float-right">
             <span class="badge badge-light">20</span> Reported Today
-        </button>
+        </button -->
         <div id="mapCanvas">
-            
+          <loading>Initializing...</loading>
         </div>
     </div> 
     {% endblock %}
@@ -20,6 +20,7 @@
 </body>
 {% block scripts %}
   {{super()}}
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7g68KcjjZ3nGcT0Jcjo6nWPXfITNVStA&libraries=visualization,places" type="text/javascript"></script>
   <script>
   window.onload = function(){
     //console.log(pickCoordinates()) 
