--- a/views/templates/includes/__create_accident_modal.html
+++ b/views/templates/includes/__create_accident_modal.html
@@ -37,12 +37,17 @@
                         <span class="close-me" onclick="close_display();">&times;</span>
                         <img id="accident_image" src="http://placehold.it/48" alt="your image" />
                     </div>
-                  </div>
+                </div>
+                <div class="form-group">
+                        <label for="accident-area" class="col-form-label">Location Name:</label>
+                        <input type="text" class="form-control form-control-sm" id="accident-area" 
+                            maxlength="25" name="acc_area_name" required>
+                </div>
                 <div class="form-group">
                     <label for="accident-address" class="sr-only">Address:</label>
                     <div class="input-group">
                         <input type="text" class="form-control form-control-sm" id="accident-address" name="acc_location"
-                            maxlength="64" placeholder="Latitude, Longitude" required>
+                             placeholder="Latitude, Longitude" required>
                         <div class="col-auto">
                           <button type="button" class="btn btn-default mb-2" id="accident-address-button"
                             onclick="pickCoordinates();">Pick HERE</button>
@@ -97,11 +102,18 @@
     </div> 
 
     <script>
-        bootstrapValidate(['#accident-title','#accident-desc'], 'min:10:Enter at least 10 characters!')
+        bootstrapValidate(['#accident-title','#accident-desc, #accident-area'], 'min:10:Enter at least 10 characters!')
         bootstrapValidate('#accident-photos','required:You must atleast select one accident photo')
         bootstrapValidate(['#no_of_dead','#un-injured','#minor-injuries','#major-injuries'],
                             'numeric:Only Numbers accepted')
-        bootstrapValidate('#accident-address', 'regex:^([-+]?)([\d]{1,2})(((\.)(\d+)(,)))(\s*)(([-+]?)([\d]{1,3})((\.)(\d+))?)$:\
-                            Use correct format lat,long')
         $('select').selectpicker();
+
+        $('#accident-address-button').click(function(){
+            $('#accident-address').attr('disabled','disabled')
+            $('#accident-address-button').value = "Switch"
+        });
+
+        $('#accident-address-button').dblclick(function(){
+            $('#accident-address').removeAttr('disabled')
+        })
     </script> 
