--- a/views/templates/home.html
+++ b/views/templates/home.html
@@ -20,7 +20,7 @@
 </body>
 {% block scripts %}
   {{super()}}
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7g68KcjjZ3nGcT0Jcjo6nWPXfITNVStA&libraries=visualization,places" type="text/javascript"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7g68KcjjZ3nGcT0Jcjo6nWPXfITNVStA&libraries=visualization,places&language=EN&region=UG" type="text/javascript"></script>
   <script>
   window.onload = function(){
     //console.log(pickCoordinates()) 
