--- a/views/templates/includes/__edit_accident_modal.html
+++ b/views/templates/includes/__edit_accident_modal.html
@@ -9,7 +9,7 @@
         </button>
         </div>
         <div class="modal-body">
-        <form action="/create-accident" enctype="multipart/form-data" method="POST">
+        <form action="/update/accident" enctype="multipart/form-data" method="POST">
             <div class="form-group">
                 <label for="accident-title" class="col-form-label">Title:</label>
                 <input type="text" class="form-control form-control-sm" id="accident-title" value="{{accident.acc_title}}" name="acc_title" required>
