--- a/views/templates/chart_report.html
+++ b/views/templates/chart_report.html
@@ -12,7 +12,9 @@
               <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" 
                 role="tab" aria-controls="v-pills-profile" aria-selected="false">Accident Per Area</a>   
               <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" 
-                role="tab" aria-controls="v-pills-settings" aria-selected="false">Victims Per Area</a>
+                role="tab" aria-controls="v-pills-settings" aria-selected="false">By Road Users</a>              
+              <a class="nav-link" id="v-pills-byhour-tab" data-toggle="pill" href="#v-pills-by-hour" 
+                role="tab" aria-controls="v-pills-by-hour" aria-selected="false">Accident By Hour</a>
             </div>
           </div>
           <div class="col-9">
@@ -56,6 +58,13 @@
                   <nav class="navbar navbar-light bg-light">
                       <span class="navbar-text">
                           No. of Accident Victims per Area in Kampala
+                      </span>
+                  </nav>
+              </div>
+              <div class="tab-pane fade" id="v-pills-by-hour" role="tabpanel" aria-labelledby="v-pills-byhour-tab">
+                  <nav class="navbar navbar-light bg-light">
+                      <span class="navbar-text">
+                          No. of Accident Per Hour
                       </span>
                   </nav>
               </div>
