--- a/views/templates/includes/__nav.html
+++ b/views/templates/includes/__nav.html
@@ -16,9 +16,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="/about">About</a>
 				</li>
-				<li class="nav-item">
+				<!--li class="nav-item">
 						<a class="nav-link" href="/feeds">Feeds</a>
-				</li>
+				</li -->
 				{% if session['username'] %}
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" 
