--- a/views/templates/chart_report.html
+++ b/views/templates/chart_report.html
@@ -8,9 +8,9 @@
           <div class="col-3">
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
               <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" 
-                role="tab" aria-controls="v-pills-home" aria-selected="true">Accidents Summary</a>
+                role="tab" aria-controls="v-pills-home" aria-selected="true">By Road Users</a>
               <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" 
-                role="tab" aria-controls="v-pills-profile" aria-selected="false">Accident Per Area</a>   
+                role="tab" aria-controls="v-pills-profile" aria-selected="false">By Area</a>   
               <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" 
                 role="tab" aria-controls="v-pills-settings" aria-selected="false">By Road Users</a>              
               <a class="nav-link" id="v-pills-byhour-tab" data-toggle="pill" href="#v-pills-by-hour" 
@@ -22,7 +22,7 @@
               <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
                   <nav class="navbar navbar-light bg-light">
                       <span class="navbar-text">
-                        Accident Statistics Summary
+                        No. of Accident Victims per Area in Kampala
                       </span>
                   </nav>
                   <br>
